--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
   <meta name="description" content="Initiaition react - Country of the world" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/img/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Country of the world</title>
+  <title>The world's countries</title>
 </head>
 
 <body>
